docs/src/content/v1.0.0/en-us/insert.md
# Insert

Dinoco uses the generated entity itself as create input. There is no `#[insertable]` derive and no parallel create struct. Defaults, generated IDs, and relation metadata are already part of the entity.

## Create an entity

Use its generated `new()` constructor:

```rust
let mut user = User::new(
    "ana@example.com".to_string(),
    "Ana".to_string(),
);

user.bio = Some("Rust developer".to_string());
```

`new()` asks only for required scalar values without defaults or generators. This keeps construction short without hiding which values the caller must supply.

## Insert one entity

```rust
use dinoco::insert_into;

insert_into::<User>()
    .values(&user)
    .execute(&client)
    .await?;
```

Passing `&user` borrows it, so the insert does not drop or move your value. An owned entity is accepted as well.

## Insert many entities

```rust
use dinoco::insert_many;

let users = vec![
    User::new("ana@example.com".to_string(), "Ana".to_string()),
    User::new("leo@example.com".to_string(), "Leo".to_string()),
];

insert_many::<User>()
    .values(&users)
    .execute(&client)
    .await?;
```

The insert path groups scalar rows into adapter-native multi-row operations rather than issuing one independent public builder per item.

## Insert relations

Put nested entities directly in the generated relation field. This works for both a `Vec` relation and the one-side `Option` relation:

```rust
let mut user = User::new(
    "ana@example.com".to_string(),
    "Ana".to_string(),
);
user.tokens = vec![UserToken::new(), UserToken::new()];

insert_into::<User>()
    .values(&user)
    .execute(&client)
    .await?;
```

For an optional one relation:

```rust
user.profile = Some(Profile::new());
```

Dinoco inserts nested one-to-many, many-to-one, and one-to-one data using relation metadata and propagates the relevant generated key. There is no `.with_relation(...)` call.

For many-to-many, insert the endpoint records first and manage the join entity explicitly with `connect` and `disconnect` in the update API.

## Generated identifiers

UUID and Snowflake values are generated by the library before dependent relation rows are built. Auto-increment keys are retrieved from the database. This allows relation inserts to work even when the parent ID was absent from `new()`.

## Returning a projection

Without `.returning`, insert execution returns `()`. Add an entity or `EntityExtend` projection when the caller needs inserted data:

```rust
let inserted = insert_into::<User>()
    .values(&user)
    .returning::<UserSummary>()
    .execute(&client)
    .await?;

let inserted_many = insert_many::<User>()
    .values(&users)
    .returning::<User>()
    .execute(&client)
    .await?;
```

The first result is one `UserSummary`; the second is `Vec<User>`. Request returning data only when it is used, because nested inserts may need a reload to assemble the requested projection.
