docs/src/content/v1.1.2/en-us/insert.md
# Insert

Dinoco uses the generated entity itself as create input. There is no `#[insertable]` derive and no parallel create struct. Defaults, generated IDs, and relation metadata are already part of the entity.

## Create an entity

Use its generated `new()` constructor:

```rust
let mut user = User::new(
    "ana@example.com".to_string(),
    "Ana".to_string(),
);

user.bio = Some("Rust developer".to_string());
```

`new()` asks only for required scalar values without defaults or generators. This keeps construction short without hiding which values the caller must supply.

## Insert one entity

```rust
use dinoco::insert_into;

insert_into::<User>()
    .values(&user)
    .execute(&client)
    .await?;
```

Passing `&user` borrows it, so the insert does not drop or move your value. An owned entity is accepted as well.

## Insert many entities

```rust
use dinoco::insert_many;

let users = vec![
    User::new("ana@example.com".to_string(), "Ana".to_string()),
    User::new("leo@example.com".to_string(), "Leo".to_string()),
];

insert_many::<User>()
    .values(&users)
    .execute(&client)
    .await?;
```

The insert path groups scalar rows into adapter-native multi-row operations rather than issuing one independent public builder per item.

## Insert relations

Put nested entities directly in the generated relation field. This works for both a `Vec` relation and the one-side `Option` relation:

```rust
let mut user = User::new(
    "ana@example.com".to_string(),
    "Ana".to_string(),
);
user.tokens = vec![UserToken::new(), UserToken::new()];

insert_into::<User>()
    .values(&user)
    .execute(&client)
    .await?;
```

For an optional one relation:

```rust
user.profile = Some(Profile::new());
```

Dinoco inserts nested one-to-many, many-to-one, and one-to-one data using relation metadata and propagates the relevant generated key. There is no `.with_relation(...)` call.

### Connect an implicit many-to-many during insert

For an implicit many-to-many, each endpoint receives a virtual `Option<Id>` for the opposite model. Set it before `insert_into` to insert the endpoint and create its pivot link in the same builder execution:

```rust
let mut tag = Tag::new("documentation".to_string());
tag.task_id = Some(task.id.clone());

dinoco::insert_into::<Tag>()
    .values(&tag)
    .execute(&client)
    .await?;
```

The same behavior applies independently to every `insert_many` payload:

```rust
let mut tags = vec![
    Tag::new("rust".to_string()),
    Tag::new("database".to_string()),
];

for tag in &mut tags {
    tag.task_id = Some(task.id.clone());
}

dinoco::insert_many::<Tag>()
    .values(&tags)
    .execute(&client)
    .await?;
```

Dinoco excludes `task_id` from the `tag` table's SQL columns. After inserting each `Tag`, it uses the virtual value to insert `(task.id, tag.id)` into the pivot. `None` inserts the endpoint without creating a link. Alternatively, insert both endpoints first and use `connect` in the update API.

The virtual ID is write-only and remains `None` when records are loaded or returned, including with `.returning::<S>()`.

The same payloads can be added to a transaction. Both the endpoint insert and its pivot link commit or roll back together:

```rust
let batch = dinoco::transaction![
    dinoco::insert_into::<Tag>().values(&tag),
    dinoco::insert_many::<Tag>().values(&tags),
];

dinoco::transactions(batch).execute(&client).await?;
```

For a transactional insert, the endpoint primary key must already be available from UUID, Snowflake, or a caller-provided value. If it uses `autoincrement()`, insert the endpoint first and connect the relation after the database returns its ID. This restriction applies only to a populated many-to-many virtual key inside a transaction; regular inserts still resolve auto-increment IDs before writing the pivot.

See [Implicit many-to-many](/v1.1.2/guide/relations#implicit-many-to-many) for the generated fields, pivot behavior, bidirectional includes, counts, connect/disconnect examples, and migration guidance.

## Generated identifiers

UUID and Snowflake values are generated by the library before dependent relation rows are built. Auto-increment keys are retrieved from the database. This allows relation inserts to work even when the parent ID was absent from `new()`.

## Returning a projection

Without `.returning`, insert execution returns `()`. Add an entity or `EntityExtend` projection when the caller needs inserted data:

```rust
let inserted = insert_into::<User>()
    .values(&user)
    .returning::<UserSummary>()
    .execute(&client)
    .await?;

let inserted_many = insert_many::<User>()
    .values(&users)
    .returning::<User>()
    .execute(&client)
    .await?;
```

The first result is one `UserSummary`; the second is `Vec<User>`. Request returning data only when it is used, because nested inserts may need a reload to assemble the requested projection.
